// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sidebar should render the component in closed state 1`] = `
<div
  className="sidebar "
>
  <nav
    className="nav"
  >
    <SidebarLink
      isSidebarOpen={false}
      link={
        Object {
          "icon": "logo",
          "name": "logo",
          "routeTo": "none",
        }
      }
    />
    <SidebarLink
      isSidebarOpen={false}
      link={
        Object {
          "icon": "dashboard",
          "name": "Dashboard",
          "routeTo": "/dashboard",
        }
      }
    />
    <SidebarLink
      isSidebarOpen={false}
      link={
        Object {
          "icon": "layouts",
          "name": "Layouts",
          "routeTo": "/layouts",
        }
      }
    />
    <SidebarLink
      isSidebarOpen={false}
      link={
        Object {
          "icon": "graphs",
          "name": "Graphs",
          "routeTo": "/graphs",
        }
      }
    />
    <SidebarLink
      isSidebarOpen={false}
      link={
        Object {
          "icon": "mailbox",
          "links": Array [
            Object {
              "name": "Inbox",
              "routeTo": "/mailbox/inbox",
            },
            Object {
              "name": "Email view",
              "routeTo": "/mailbox/email-view",
            },
            Object {
              "name": "Compose Email",
              "routeTo": "/mailbox/compose-email",
            },
            Object {
              "name": "Email templates",
              "routeTo": "/mailbox/email-templates",
            },
          ],
          "name": "Mailbox",
          "routeTo": "/mailbox",
        }
      }
    />
    <SidebarLink
      isSidebarOpen={false}
      link={
        Object {
          "icon": "metrics",
          "name": "Metrics",
          "routeTo": "/metrics",
        }
      }
    />
    <SidebarLink
      isSidebarOpen={false}
      link={
        Object {
          "icon": "widgets",
          "name": "Widgets",
          "routeTo": "/widgets",
        }
      }
    />
    <SidebarLink
      isSidebarOpen={false}
      link={
        Object {
          "icon": "forms",
          "name": "Forms",
          "routeTo": "/forms",
        }
      }
    />
  </nav>
</div>
`;

exports[`Sidebar should render the component in open state 1`] = `
<div
  className="sidebar sidebarOpen"
>
  <nav
    className="nav"
  >
    <UserAvatar
      avatar="http://s.ndtvimg.com/images/entities/120/ms-dhoni-700.png"
      name="MS Dhoni"
      role="Wicket Keeper"
    />
    <SidebarLink
      isSidebarOpen={false}
      link={
        Object {
          "icon": "dashboard",
          "name": "Dashboard",
          "routeTo": "/dashboard",
        }
      }
    />
    <SidebarLink
      isSidebarOpen={false}
      link={
        Object {
          "icon": "layouts",
          "name": "Layouts",
          "routeTo": "/layouts",
        }
      }
    />
    <SidebarLink
      isSidebarOpen={false}
      link={
        Object {
          "icon": "graphs",
          "name": "Graphs",
          "routeTo": "/graphs",
        }
      }
    />
    <SidebarLink
      isSidebarOpen={true}
      link={
        Object {
          "icon": "mailbox",
          "links": Array [
            Object {
              "name": "Inbox",
              "routeTo": "/mailbox/inbox",
            },
            Object {
              "name": "Email view",
              "routeTo": "/mailbox/email-view",
            },
            Object {
              "name": "Compose Email",
              "routeTo": "/mailbox/compose-email",
            },
            Object {
              "name": "Email templates",
              "routeTo": "/mailbox/email-templates",
            },
          ],
          "name": "Mailbox",
          "routeTo": "/mailbox",
        }
      }
    />
    <SidebarLink
      isSidebarOpen={false}
      link={
        Object {
          "icon": "metrics",
          "name": "Metrics",
          "routeTo": "/metrics",
        }
      }
    />
    <SidebarLink
      isSidebarOpen={false}
      link={
        Object {
          "icon": "widgets",
          "name": "Widgets",
          "routeTo": "/widgets",
        }
      }
    />
    <SidebarLink
      isSidebarOpen={false}
      link={
        Object {
          "icon": "forms",
          "name": "Forms",
          "routeTo": "/forms",
        }
      }
    />
  </nav>
</div>
`;
